--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "author": "coderjc <coderjc@qq.com>",
     "main": "src/index.ts",
     "scripts": {
-        "build": "vite build"
+        "build": "vite build",
+        "build:tsup": "tsup"
     },
     "repository": {
         "type": "git",
@@ -34,6 +35,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/inquirer": "^9.0.8",
         "@types/node": "^22.15.29",
-        "vite": "^6.3.5"
+        "tsup": "^8.5.0",
+        "typescript": "^5.8.3"
     }
 }
