chore(build): 简化构建脚本配置

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "author": "coderjc <coderjc@qq.com>",
     "main": "src/index.ts",
     "scripts": {
-        "build": "vite build",
-        "build:tsup": "tsup"
+        "build": "tsup"
     },
     "repository": {
         "type": "git",
