--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "description": "一个简单的模板拉取工具，如果你觉得我的模板不错，欢迎使用",
     "author": "coderjc <coderjc@qq.com>",
-    "main": "src/index.ts",
+    "main": "lib/index.js",
+    "type": "module",
     "scripts": {
-        "build": "tsup"
+        "dev": "tsc --watch",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
@@ -13,8 +15,8 @@
     },
     "homepage": "https://github.com/jieci0825/coderjc-cli",
     "bin": {
-        "coderjc": "./bin/index.js",
-        "cc": "./bin/index.js"
+        "coderjc": "bin/index.js",
+        "cc": "bin/index.js"
     },
     "keywords": [
         "cli",
@@ -34,7 +36,6 @@
         "@types/fs-extra": "^11.0.4",
         "@types/inquirer": "^9.0.8",
         "@types/node": "^22.15.29",
-        "tsup": "^8.5.0",
         "typescript": "^5.8.3"
     }
 }
