chore: 迁移项目至ES模块并优化构建配置 更新项目配置以使用ES模块，添加清理脚本，调整TS配置，并更新.gitignore

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "description": "一个简单的模板拉取工具，如果你觉得我的模板不错，欢迎使用",
     "author": "coderjc <coderjc@qq.com>",
     "main": "lib/index.js",
+    "engines": {
+        "node": ">=16.0.0"
+    },
     "type": "module",
     "scripts": {
         "dev": "tsc --watch",
-        "build": "tsc"
+        "clean": "node scripts/clean.js",
+        "build": "npm run clean && tsc"
     },
     "repository": {
         "type": "git",
