--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "dev": "tsc --watch",
         "clean": "node scripts/clean.js",
-        "build": "npm run clean && tsc"
+        "build": "npm run clean && vite build"
     },
     "repository": {
         "type": "git",
@@ -34,12 +34,14 @@
         "commander": "^14.0.0",
         "fs-extra": "^11.3.0",
         "inquirer": "^12.6.3",
-        "ora": "^8.2.0"
+        "ora": "^8.2.0",
+        "read-pkg": "^9.0.1"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.4",
         "@types/inquirer": "^9.0.8",
         "@types/node": "^22.15.29",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "vite": "^6.3.5"
     }
 }
