--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "chalk": "^5.4.1",
         "commander": "^14.0.0",
+        "execa": "^9.6.0",
         "fs-extra": "^11.3.0",
         "inquirer": "^12.6.3",
         "ora": "^8.2.0",
