fix: 修复了一些打包错误

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "type": "module",
     "scripts": {
-        "dev": "vite build --watch",
+        "dev": "npm run clean && vite build --watch",
         "clean": "node scripts/clean.js",
         "build": "npm run clean && vite build"
     },
