--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "typeRoots": ["./node_modules/@types", "./src/types"]
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "src/types/**/*.d.ts"],
     "exclude": ["node_modules", "lib", "**/*.test.ts"]
 }
