refactor(config): 重构配置管理为 ConfigManager 类
将全局配置管理重构为 ConfigManager 类，集中处理配置的加载、保存和操作。新增 config 命令相关文件结构，移除原分散的配置处理逻辑，统一通过 ConfigManager 实例管理配置数据。同时调整模板源数据结构为键值对形式。

--- a/src/global-config.json
+++ b/src/global-config.json
@@ -20,5 +20,8 @@
             "value": "koa-server-ts"
         }
     ],
-    "templateOrigins": ["https://gitee.com/qwer-li/coderjc-template", "https://github.com/jieci0825/coderjc-template"]
+    "templateOrigins": {
+        "gitee": "https://gitee.com/qwer-li/coderjc-template",
+        "github": "https://github.com/jieci0825/coderjc-template"
+    }
 }
