feat(config): 新增模板列表表格展示功能
添加 table 依赖，重构 config get 命令，支持以表格形式展示模板列表，包含名称、描述、值和源地址信息

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "inquirer": "^12.6.3",
         "ora": "^8.2.0",
         "read-pkg": "^9.0.1",
+        "table": "^6.9.0",
         "validate-npm-package-name": "^6.0.0"
     },
     "devDependencies": {
