feat(template): 重构模板配置及下载逻辑
- 新增模板配置项字段 originUrls 和 isStore
- 重构模板下载逻辑，支持多源地址检测和自动选择
- 优化模板列表展示，增加配置数据输出
- 移除冗余代码，简化创建命令上下文结构

--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
         "node": ">=18.0.0"
     },
     "type": "module",
+    "files": [
+        "lib",
+        "bin",
+        "README.md",
+        "LICENSE"
+    ],
     "scripts": {
         "dev": "npm run clean && vite build --watch",
         "clean": "node scripts/clean.js",
