docs: 全面重写README文档并更新项目描述
重写README文档，添加详细的功能介绍、使用说明、命令参考和配置指南。更新项目描述为更专业的表述，增加特性列表、环境要求、安装指南和故障排除等内容。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "coderjc-cli",
     "version": "0.1.0",
-    "description": "一个简单的模板拉取工具，如果你觉得我的模板不错，欢迎使用",
+    "description": "一个简单的模板拉取工具，如果你觉得还不错，欢迎使用",
     "author": "coderjc <coderjc@qq.com>",
     "main": "lib/index.js",
     "engines": {
