--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@types/node": "^25.3.0",
+        "prettier": "^3.8.1",
         "tsdown": "^0.20.3",
         "typescript": "^5.9.3"
     }
