chore: 添加新的CLI命令别名
- 在package.json中新增"cjc"命令，指向相同的执行文件"./dist/index.mjs"

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "type": "module",
     "bin": {
-        "coderjc": "./dist/index.mjs"
+        "coderjc": "./dist/index.mjs",
+        "cjc": "./dist/index.mjs"
     },
     "scripts": {
         "build": "tsdown",
